clean up stale templates
